[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logged-in-user"
version = "0.0.1"
description = "Shows logged in user and enables to logout using popover button."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Miika Jukakoski", email = "miika.jukakoski@gmail.com" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
include = ["logged_in_user*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
logged_in_user = ["frontend/build/**/*", "pyproject.toml"]

[tool.streamlit.component]
components = [
  { name = "logged_in_user", asset_dir = "logged_in_user/frontend/build" }
]
